src/content/shared.css
/**
 * Common stylesheets
 * Created by Martin Giger
 * Licensed under the MPLv2
 */

:root {
    --accent-dark-bg: #2c24c5;
    --accent-dark-text: white;
    --accent-light-bg: #497dfe;
    --accent-light-text: white;
    --inverted-bg: var(--accent-dark-text);
    --inverted-text: black;
    --inverted-separator: var(--accent-dark-bg);
    --warn: #fc9b0a;
    --error: #d51e1e;
}

body {
    padding: 0;
    margin: 0;
    -moz-user-select: none;
    user-select: none;
    line-height: 1.2em;
    font-family: sans-serif;
}

.dark {
    --inverted-bg: #242424;
    --inverted-text: white;
}

.black {
    --inverted-bg: black;
    --inverted-text: gray;
}

.loading {
    cursor: progress !important;
}

.inline-list {
    padding: 0;
    margin: 0;
    display: flex;
    flex-direction: row;
}

.inline-list > li {
    list-style-type: none;
}

.right {
    text-align: right;
}

[hidden] {
    display: none !important;
    visibility: hidden;
}

/* visual things */

/* TOPBAR */
.topbar {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    background: var(--accent-dark-bg);
}

.topbar button {
    appearance: none;
}

.topbar a:link,
.topbar a:hover,
.topbar a:active,
.topbar a:visited,
.topbar button {
    color: var(--accent-dark-text);
    text-decoration: none;
    display: inline-block;
    background-color: var(--accent-dark-bg);
    font-size: inherit;
    border: none;
    box-sizing: border-box;
}

.topbar .tabstrip a.current,
.topbar .toolbar a:hover,
.topbar a:active,
.topbar a[aria-pressed="true"],
.topbar .tabstrip button.current,
.topbar button:hover,
.topbar button:active,
.topbar button[aria-pressed="true"] {
    background: var(--accent-light-bg);
    color: var(--accent-light-text);
}

/* END TOPBAR */

/* START ERROR STATE */
.esv summary {
    padding: 0 0.5em;
}

.esv ul {
    padding: 0;
    margin: 0;
    list-style-type: none;
}

.esv ul li {
    margin: 0;
    padding: 0.5em;
}

.esv ul > li p {
    margin: 0;
}

.esv .buttons {
    margin-top: 0.5em;
}

.recoverable {
    background-color: var(--warn);
}

.unrecoverable {
    background-color: var(--error);
    color: white;
}

/* END ERROR STATE */

